--- a/Your_destiny_is_determined_by_the_random/Your_destiny_is_determined_by_the_random_log.html
+++ b/Your_destiny_is_determined_by_the_random/Your_destiny_is_determined_by_the_random_log.html
@@ -24,7 +24,7 @@ p.credit2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <body>
 <h2>Your_destiny_is_determined_by_the_random Log</h2>
 <p class="info">アプリケーションを開始します。</p>
-<p class="info">2015/1/16 23:43:06</p>
+<p class="info">2015/1/17 00:14:25</p>
 <p class="info">エンジンを初期化します。</p>
 <p class="info">Siv3D Engine (Debug build) version November 2014 v2</p>
 <p class="debug">BinaryReader &quot;c:\Users\ka-s\documents\visual studio 2013\Projects\Siv3D(November2014v2)\Your_destiny_is_determined_by_the_random\engine\Siv3DVersion&quot; をオープンしました。サイズ: 4B</p>
@@ -366,9 +366,14 @@ p.credit2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="info">エンジンの初期化が完了しました。</p>
 <p class="info">メインスレッドを開始しました。</p>
 <hr width="76%">
+<p class="debug">Font[2] を作成しました。</p>
 <p class="debug">スプラッシュウィンドウの表示を終了します。</p>
 <p class="debug">解像度を 1024x768 に変更しました。</p>
+<p class="debug">(dynamic texture) (サイズ 1024x160 Format: 41)</p>
+<p class="debug">Texture[3] を作成しました。</p>
 <p class="info">System::Update() : ExitEvent EscapeKey</p>
+<p class="debug">Texture[3] を破棄しました。</p>
+<p class="debug">Font[2] を破棄しました。</p>
 <hr width="76%">
 <p class="info">メインスレッドを終了しました。</p>
 <p class="info">ウィンドウメッセージの終了を待機中です。</p>
@@ -467,7 +472,7 @@ p.credit2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="debug">GDI+ を終了しました。</p>
 <p class="info">ウィンドウクラスの登録を解除しました。</p>
 <p class="info">エンジンを終了しました。</p>
-<p class="info">2015/1/16 23:43:09</p>
+<p class="info">2015/1/17 00:14:29</p>
 
 <br>
 <p class="credit0">Siv3D Engine November 2014 v2</p>
