ゴールの設定
表示形式の変更

--- a/Your_destiny_is_determined_by_the_random/Your_destiny_is_determined_by_the_random_log.html
+++ b/Your_destiny_is_determined_by_the_random/Your_destiny_is_determined_by_the_random_log.html
@@ -24,7 +24,7 @@ p.credit2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <body>
 <h2>Your_destiny_is_determined_by_the_random Log</h2>
 <p class="info">アプリケーションを開始します。</p>
-<p class="info">2015/1/17 15:14:02</p>
+<p class="info">2015/1/17 16:10:15</p>
 <p class="info">エンジンを初期化します。</p>
 <p class="info">Siv3D Engine (Debug build) version November 2014 v2</p>
 <p class="debug">BinaryReader &quot;C:\Users\ka-s\Documents\Visual Studio 2013\Projects\Siv3D(November2014v2)\Your_destiny_is_determined_by_the_random\engine\Siv3DVersion&quot; をオープンしました。サイズ: 4B</p>
@@ -57,7 +57,7 @@ p.credit2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="debug">入力デバイスを初期化しました。</p>
 <p class="info">Kinect v1 は使用できません。</p>
 <p class="info">Kinect v2 は使用できません。</p>
-<p class="info">サウンドデバイス: スピーカー (Realtek High Definition Audio)</p>
+<p class="info">サウンドデバイス: BenQ GL2250H-4 (NVIDIA High Definition Audio)</p>
 <p class="debug">Sound[0(null)] を作成しました。</p>
 <p class="debug">XAudio2(2.7) を初期化しました。</p>
 <p class="info">d3d11.dll をロードしました。</p>
@@ -472,7 +472,7 @@ p.credit2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="debug">GDI+ を終了しました。</p>
 <p class="info">ウィンドウクラスの登録を解除しました。</p>
 <p class="info">エンジンを終了しました。</p>
-<p class="info">2015/1/17 15:14:06</p>
+<p class="info">2015/1/17 16:10:27</p>
 
 <br>
 <p class="credit0">Siv3D Engine November 2014 v2</p>
